Fixed bottom bar color on iOS

--- a/src/theme/custom.css
+++ b/src/theme/custom.css
@@ -21,18 +21,9 @@ ion-chip {
 ion-chip.selected {
 	--background: var(--ion-color-primary);
 }
-/* Round bottom toolbar (WIP) */
-/* .footer-md::before {
-	background-image: none;
-}
 ion-toolbar.bottom-bar {
-	--opacity: 0;
+	--background: var(--ion-color-light);
 }
-ion-tab-bar.bottom-bar {
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
-} */
-/* END Round bottom toolbar */
 .center-content {
 	position: absolute;
 	left: 0;
